--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,12 +18,9 @@ spring:
     open-in-view: true
     hibernate:
       ddl-auto: update
-      #      naming:
-      #        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-      use-new-id-generator-mappings: false
-    show-sql: true
     properties:
       hibernate.format_sql: true
+    generate-ddl: true
 
   jackson:
     serialization:
